Included success.html and already-exists.html

--- a/src/shorterner/templates/shorterner/home.html
+++ b/src/shorterner/templates/shorterner/home.html
@@ -5,8 +5,6 @@
     <form action="." method="POST"> {% csrf_token %}
         <!-- <input name="url" type="text" placeholder="Enter a url" /> -->
         {{ form.as_p }}
-        <input type="submit" value="Shortern" />
-        
+        <input type="submit" value="Shorten" />
     </form>
-    
 </div>
