Created an analytics app that captures a click counter upon redirection

--- a/src/shortener/templates/shortener/success.html
+++ b/src/shortener/templates/shortener/success.html
@@ -5,7 +5,7 @@
 
     <p>{{ object.shortcode }}</p>
 
-    <p>Short URL: {{ object.get_short_url }}</p>
+    <p><a href="{{ object.get_short_url }}">{{ object.get_short_url }}</a></p>
 
     <a href="/">+ New</a>
 </div>
