--- a/src/shortener/templates/shortener/already-exists.html
+++ b/src/shortener/templates/shortener/already-exists.html
@@ -6,7 +6,11 @@
 
     <p>{{ object.shortcode }}</p>
 
-    <p>Short URL: {{ object.get_short_url }}</p>
+    {% if object.clickevent %}
+        <p>Count: {{ object.clickevent.count }}</p>
+    {% endif %}
+
+    <p><a href="{{ object.get_short_url }}">{{ object.get_short_url }}</a></p>
 
     <a href="/">+ New</a>
 </div>
