Prevent multiple calls to the database in URLRedirectView

--- a/src/shortener/templates/shortener/success.html
+++ b/src/shortener/templates/shortener/success.html
@@ -5,7 +5,7 @@
 
 <div class="center col s12 m8 offset-m2 l8 offset-l2">
 
-    <h3>Great! You've created a short URL</h3>
+    <h3>Great! You've successfully created a short URL</h3>
 
     <h5><a href="{{ object.get_short_url }}">{{ object.get_short_url }}</a></h5>
 
